# LatticeBoltzmannMethod

./: README.md
CurvedSolid/: binary_shape.cpp
Deposition/: binary_deposition.cpp  deposition.avi
DiffusionChannelUniform/: film_antibb.cpp
DiffusionCylinder/: cylinder.cpp  cylinder_inamuro.cpp
FallingEllipseImmersedBoundary/: ellipse.cpp
FreeEnergy/: binary.cpp  visualization.py
FreeSurface/: hydro_periodic.cpp
GaussianHill/: gaussian_magic.cpp  gaussian_trt.cpp
ImmersedBoundary/: benchmarks.ipynb
ImmersedBoundary/Figures/Benchmarks/: steady_cylinder.cpp  vtk_ellipse_000000_imm.vtk  vtk_ellipse_000000_ref.vtk  vtk_ellipse_001000_imm.vtk  vtk_ellipse_001000_ref.vtk  vtk_ellipse_002000_imm.vtk  vtk_ellipse_002000_ref.vtk  vtk_moving_cylinder_imm.vtk  vtk_moving_cylinder_ref.vtk  vtk_steady_state_imm.vtk
MRT/: another_mrt.cpp  mrt.cpp
Microchannel3D/: benchmark_lbm.eps
Microchannel3D/FullChannel/: CMakeLists.txt  binary.pbs  binary.sh  descriptor.h  lattice.h  main.cpp  mpi_singleton.h  mpi_wrapper.cpp  mpi_wrapper.h  params_list.h  singleton.h  solver.hpp
Microchannel3D/QuarterChannel/: CMakeLists.txt  destroyer.h  lattice.h  lattice.hpp  main.cpp  mpi_singleton.cpp  mpi_wrapper.cpp  solver.h  solver.hpp  tensors.nb
MovingCylinderImmersedBoundary/: moving_cylinder.cpp
ShanChen/: shanchen.cpp  visualization.py
ShanChenGPU/: Makefile  Makefile_Graphics  cpu.cpp  feq_improved.cl  main.cpp  plot.gp
